# crewAI

augmented_llms/: README.md  pyproject.toml  report.md
augmented_llms/db/: chroma.sqlite3
augmented_llms/memory/entity/: chroma.sqlite3
augmented_llms/memory/long_term/: long_term_memory_storage.db
augmented_llms/memory/short_term/: chroma.sqlite3
augmented_llms/src/augmented_llms/: crew.py  main.py
augmented_llms/src/augmented_llms/config/: agents.yaml  tasks.yaml
budget_knowledge/: pyproject.toml
budget_knowledge/src/budget_knowledge/: main.py  pdfSearch.py
budget_knowledge/src/budget_knowledge/crews/budget_or_internet_check_crew/: budget_or_internet_crew.py
budget_knowledge/src/budget_knowledge/crews/budget_or_internet_check_crew/config/: agents.yaml  tasks.yaml
budget_knowledge/src/budget_knowledge/crews/budget_response_crew/: budget_crew.py
budget_knowledge/src/budget_knowledge/crews/budget_response_crew/config/: agents.yaml  tasks.yaml
budget_knowledge/src/budget_knowledge/crews/internet_response_crew/: internet_crew.py
crew00/: README.md  pyproject.toml  report.md
crew00/src/crew00/: crew.py  main.py
last_onsite_class/: README.md  pyproject.toml  report.md  research_task_report.md  trained_agents_data.pkl  training_data.pkl
last_onsite_class/db/: chroma.sqlite3
last_onsite_class/memory/EntityMemory/: chroma.sqlite3
last_onsite_class/memory/long_term/: long_term_memory_storage.db
last_onsite_class/memory/short_term/: chroma.sqlite3
last_onsite_class/src/last_onsite_class/: crew.py  main.py
last_onsite_class/src/last_onsite_class/config/: agents.yaml  tasks.yaml
latest_ai_development/: report.json  report.md  report2.md
latest_ai_development/src/latest_ai_development/: crew.py  main.py
my_flow_project/: README.md  pyproject.toml
my_flow_project/src/my_flow_project/: main.py
my_flow_project/src/my_flow_project/crews/crew1/: crew.py
my_flow_project/src/my_flow_project/crews/crew1/config/: agents.yaml  tasks.yaml
poem_generator/: README.md  poem.txt  pyproject.toml
poem_generator/src/poemflow/: main.py
poem_generator/src/poemflow/crews/poem_crew/: poem_crew.py
