[project]
name = "last_onsite_class"
version = "0.1.0"
description = "last-onsite-class using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
last_onsite_class = "last_onsite_class.main:run"
run_crew = "last_onsite_class.main:run"
train = "last_onsite_class.main:train"
replay = "last_onsite_class.main:replay"
test = "last_onsite_class.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
