[project]
name = "my_flow_project"
version = "0.1.0"
description = "my-flow-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "my_flow_project.main:kickoff"
plot = "my_flow_project.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
